I got 99 problems but an uploader ain't one
Update, Delete, Insert ALL FUNCTIONAL! I WIN.

Also had to add a link (where the Delete X is) for edit to work. Don't
know why. But that's the one on INDEX under browser. WHOOOOOOOOOO. (had
to celebrate one more time because that's how awesome it is that this
works)

--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Create.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Create.cshtml
@@ -15,12 +15,18 @@
             @Html.LabelFor(model => model.fileName)
 
             @Html.EditorFor(model => model.fileName)
-       @*     @Html.ValidationMessageFor(model => model.Name)*@
+       @*     @Html.ValidationMessageFor(model => model.fileName)*@
+
+    @Html.LabelFor(model => model.fileDescription)
+    @Html.EditorFor(model => model.fileDescription)
+                @*     @Html.ValidationMessageFor(model => model.fileDescription)*@
+    @Html.LabelFor(model => model.browser)
+    @Html.EditorFor(model => model.browser)
+     @*     @Html.ValidationMessageFor(model => model.browser)*@   
                
+                              
     @Html.LabelFor(model => model.fileData)
-    @Html.TextBoxFor(model => model.fileData, new { type = "file"}) 
-    
-    
+    @Html.TextBoxFor(model => model.fileData, new { type = "file"})         
     <input type="submit" id="submit" value="submit" />
 }
 
