--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Delete.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model fluffyUnicorns.Models.Image
+﻿@model fluffyUnicorns.Models.bookmark
 @{
     ViewBag.Title = "Delete Your Bookmarks!";
 }
@@ -13,7 +13,8 @@
         <legend>Bookmarks</legend>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.fileData)
+              @Html.HiddenFor(model => model.Id)
+            @Html.LabelFor(model => model.fileName)
         </div>
         @*<div class="editor-field">
             @Html.EditorFor(model => model.title)
