--- a/fluffyUnicorns/fluffyUnicorns/Content/Site.css
+++ b/fluffyUnicorns/fluffyUnicorns/Content/Site.css
@@ -6,7 +6,7 @@
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Concert One', cursive;
+    font-family: 'Concert One', sans-serif;
     color:white;
 }
 
