--- a/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
         <link href="Images/favicon.ico" rel="shortcut icon" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="~/Content/foundation.css" rel="stylesheet" />   
-        <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900|Concert+One|The+Girl+Next+Door|Patrick+Hand+SC|Londrina+Shadow' rel='stylesheet' type='text/css'>
+        <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900|Concert+One|The+Girl+Next+Door|Patrick+Hand+SC|Londrina+Shadow" rel='stylesheet' type='text/css'>
         @Styles.Render("~/Content/css")
         <link href="~/Content/jquery.bxslider.css" rel="stylesheet" />
         @Scripts.Render("~/bundles/jquery")
