--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Create.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Create.cshtml
@@ -6,7 +6,7 @@
 <h2>Create</h2>
 
 
-
+<span style="color:red">@ViewBag.result</span>
         <div class="editor-label">
            @using (Html.BeginForm("Create","bookmark", FormMethod.Post, new {enctype = "multipart/form-data"}))
 {
