--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Edit.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Edit.cshtml
@@ -4,39 +4,42 @@
     ViewBag.Title = "Edit";
 }
 
+<h2>Edit Bookmarks</h2>
+
 @using (Html.BeginForm()) {
    
-     @Html.AntiForgeryToken()
+    @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    
+    <p>Below you can edit your existing bookmarks.</p>
        
     <div class="editor-label">
-         @Html.HiddenFor(model => model.Id)
+        @Html.HiddenFor(model => model.Id)
         
-    
-            @Html.LabelFor(model => model.fileName)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.fileName)
-          @*  @Html.ValidationMessageFor(model => model.Name)*@
+        @Html.LabelFor(model => model.fileName, "Title")
     </div>
-        <div class="editor-label">
-         
+    <div class="editor-field">
+        @Html.EditorFor(model => model.fileName)
+        @*  @Html.ValidationMessageFor(model => model.Name)*@
+    </div>
+    <div class="editor-label">
+        @Html.LabelFor(model => model.fileDescription, "Description")
+        @Html.EditorFor(model => model.fileDescription)
+        @*     @Html.ValidationMessageFor(model => model.fileDescription)*@
 
+        @Html.LabelFor(model => model.url, "URL")
+        @Html.EditorFor(model => model.url)
 
-             @Html.LabelFor(model => model.fileDescription)
-    @Html.EditorFor(model => model.fileDescription)
-                @*     @Html.ValidationMessageFor(model => model.fileDescription)*@
-    @Html.LabelFor(model => model.browser)
-    @Html.EditorFor(model => model.browser)
-        </div>
-          <input type="submit" value="Save" />
-        }
+        @Html.LabelFor(model => model.browser, "Browser")
+        @Html.EditorFor(model => model.browser)
+    </div>
+        <br />    
+        <br />
+        <input type="submit" value="Save" class="button" />
+}
 
-        <div>
     @Html.ActionLink("Back to List", "Index")
-</div>
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
