Added logout functionality

--- a/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Shared/_Layout.cshtml
@@ -59,7 +59,7 @@
                         @Html.ActionLink("Help", "Help", "Home")
                         @Html.ActionLink("Privacy Policy", "Privacy", "Home")
                         @Html.ActionLink("Terms of Use", "Terms", "Home")
-                        @Html.ActionLink("Logout", "Logout")
+                        @Html.ActionLink("Logout", "Logout", "Home")
                         </div>
                         <div class="large-6 medium-6 small-12 columns social">
                         <a href="http://www.facebook.com"><img src="~/Images/fb-bl.png" /></a>
