enabled & fixed validation

--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Index.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Index.cshtml
@@ -79,6 +79,9 @@ Array userData = File.ReadAllLines(dataFile);
       <div id="myDiv"><h2>Read this file .</h2></div>
 <button type="button" onclick="loadXMLDoc()">Show Content</button>  
 
+
+@*We aren't going to have time to do this.....*@
+
 @*<div class="large-4 medium-12 small-12 columns">
     <div class="side">
         <h4>Categories</h4>
