--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Create.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Create.cshtml
@@ -17,42 +17,33 @@
         
         @Html.LabelFor(model => model.fileName, "Title")
         @Html.EditorFor(model => model.fileName)
-        @*@Html.ValidationMessageFor(model => model.fileName, "*Required")*@
+        @Html.ValidationMessageFor(model => model.fileName)
 
         @*REDUNDANT?*@
         @Html.LabelFor(model => model.fileDescription, "Description")
         @Html.EditorFor(model => model.fileDescription)
-        @*@Html.ValidationMessageFor(model => model.fileDescription, "*Required")*@
+        @Html.ValidationMessageFor(model => model.fileDescription)
                
         @Html.LabelFor(model => model.url, "URL")
         @Html.EditorFor(model => model.url)
-        @*@Html.ValidationMessageFor(model =>model.url, "*Required")*@
+        @Html.ValidationMessageFor(model =>model.url)
                
         @*REDUNDANT?*@
         @Html.LabelFor(model => model.browser, "Browser")
         @Html.EditorFor(model => model.browser)
-        @*@Html.ValidationMessageFor(model => model.browser, "*Required")*@         
+        @Html.ValidationMessageFor(model => model.browser)         
         <br />
          @Html.LabelFor(model => model.fileData, "Upload Exported HTML Bookmarks")
         @Html.TextBoxFor(model => model.fileData, new { type = "file"})
+           @Html.ValidationMessageFor(model => model.fileData)
+
         <br />
         <input type="submit" value="Submit" class="button" />
         <a class="helpb" href="@Url.Action("Help", "Home")">Help</a>
     }
 </div>
 
-<div class="large-6 medium-12 small-12 columns">
-    <p>Import bookmarks from your browser here.</p>
-    @*NEEDS TO BE FIXED*@
-    @*@using (Html.BeginForm("Create","bookmark", FormMethod.Post, new {enctype = "multipart/form-data"}))
-    {
-        @Html.LabelFor(model => model.fileData, "Upload Exported HTML Bookmarks")
-        @Html.TextBoxFor(model => model.fileData, new { type = "file"})
-        *@<br />
-        <br />
-       @* <input type="submit" value="Upload" class="button" />
-        <a class="helpb" href="@Url.Action("Help", "Home")">Help</a>*@
-    }
+
 </div>
 </div>
 
