--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Edit.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Edit.cshtml
@@ -20,18 +20,21 @@
     </div>
     <div class="editor-field">
         @Html.EditorFor(model => model.fileName)
-        @*  @Html.ValidationMessageFor(model => model.Name)*@
+         @Html.ValidationMessageFor(model => model.fileName)
     </div>
     <div class="editor-label">
         @Html.LabelFor(model => model.fileDescription, "Description")
         @Html.EditorFor(model => model.fileDescription)
-        @*     @Html.ValidationMessageFor(model => model.fileDescription)*@
+             @Html.ValidationMessageFor(model => model.fileDescription)
 
         @Html.LabelFor(model => model.url, "URL")
         @Html.EditorFor(model => model.url)
+   @Html.ValidationMessageFor(model => model.url)
 
         @Html.LabelFor(model => model.browser, "Browser")
         @Html.EditorFor(model => model.browser)
+           @Html.ValidationMessageFor(model => model.browser)
+
     </div>
         <br />    
         <br />
