--- a/fluffyUnicorns/fluffyUnicorns/Content/Site.css
+++ b/fluffyUnicorns/fluffyUnicorns/Content/Site.css
@@ -135,7 +135,7 @@ input, select {
 }
 
 .edit, .helpb {
-    margin-left:25px;
+    margin:0 25px;
     font-size:smaller;
 }
 
@@ -201,4 +201,12 @@ p.info {
     padding:10px;
     max-width:700px;
     margin:0 auto;
+}
+
+.bkmk {
+    margin-bottom:40px;
+}
+
+.lk {
+    margin-bottom:70px;
 }
