--- a/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Delete.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/bookmark/Delete.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h2>Delete</h2>
-<p>Are you sure you want to delete this bookmark?</p>
+<p>Are you sure you want to delete this record?</p>
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
