--- a/fluffyUnicorns/fluffyUnicorns/Views/Home/Help.cshtml
+++ b/fluffyUnicorns/fluffyUnicorns/Views/Home/Help.cshtml
@@ -30,24 +30,49 @@
     <h3>Help Topics</h3>
     <p id="instr">Click a topic below to view more information.</p>
 
-    <a id="title1"><h4 class="title" data-infoID="info1">Adding Bookmarks</h4></a>
-    <p class="info" id="info1">I hope I didn't brain my damage. Marge, just about everything's a sin. Y'ever sat down and read this thing? Technically we're not supposed to go to the bathroom. Uh, no, they're saying "Boo-urns, Boo-urns."</p>
+    <a id="title1"><h4 class="title" data-infoID="info1">Adding A Link</h4></a>
+    <p class="info" id="info1">
+        Adding new links is easy! Simply go to @Html.ActionLink("My Cloud Markers", "Index", "bookmark") and click the 'Add a Link' button on the right side. This will prompt you to enter a Title for your new link and the URL. Remember to prefix your URL with 'http://www.' Click 'Submit' and your new link will be waiting for you!
+    </p>
 
     <a id="title2"><h4 class="title" data-infoID="info2">Importing Bookmarks</h4></a>
-    <p class="info" id="info2">Dad didn't leave… When he comes back from the store, he's going to wave those pop-tarts right in your face! Oh, so they have Internet on computers now! I prefer a vehicle that doesn't hurt Mother Earth. It's a go-cart, powered by my own sense of self-satisfaction.</p>
+    <p class="info" id="info2">
+        Cloud Marker allows you to import your bookmarks from your browsers for easy access from anywhere!<br /><br />
+        <em>Google Chrome:</em> &nbsp Click the menu button in the top right corner (three horizontal lines). From there, hover over 'Bookmarks' and click 'Bookmark Manager' (also reachable by hitting Ctrl+Shift+O). Once there, click 'Organise' and select 'Export bookmarks to HTML file...' Change the name of the file if you wish and save it in a place where you can easily find it (you can delete this file after you upload it to Cloud Marker).<br /><br />
+        <em>Firefox:</em> &nbsp From the Firefox start page, click 'Bookmarks' at the bottom of the page. When the window opens, click 'Import and Backup' and select 'Export Bookmarks to HTML...'. Change the name of the file if you wish and save it in a place where you can easily find it (you can delete this file after you upload it to Cloud Marker).<br /><br />
+        <em>Internet Explorer 11:</em> &nbsp Click the star at the top right of the screen. From here, click the downward arrow beside 'Add to Favourites' and select 'Import and Export'. In this new window, select 'Export to a file' and click next. Select the box for 'Favourites', and click next. If you have multiple bookmarks folders, select which one you wish to export. Click next. Change the name of the file if you wish and save it in a place where you can easily find it (you can delete this file after you upload it to Cloud Marker). Click 'Export'.<br /><br />
+        <strong>Next,</strong> &nbsp Navigate to @Html.ActionLink("My Cloud Markers", "Index", "bookmark") and click the 'Import Bookmarks' button on the left. This will prompt you to give your imported bookmarks a title, description, and specify which browser they are from. Below this, you will upload the HTML file you just created from your browser. You can import bookmarks from an unlimited number of browsers on Cloud Marker!
+    </p>
 
     <a id="title3"><h4 class="title" data-infoID="info3">Editing Bookmarks</h4></a>
-    <p class="info" id="info3">Marge, just about everything's a sin. Y'ever sat down and read this thing? Technically we're not supposed to go to the bathroom. I'm normally not a praying man, but if you're up there, please save me, Superman. Fame was like a drug. But what was even more like a drug were the drugs. Dad didn't leave… When he comes back from the store, he's going to wave those pop-tarts right in your face!</p>
+    <p class="info" id="info3">
+        To edit your imported bookmarks or added links, click 'Edit' beside the one you wish you alter on the @Html.ActionLink("My Cloud Markers", "Index", "bookmark") page. This will prompt you to update the information you wish to change. Click the 'Save' button, and your changes will be in place when you return to the previous page. 
+    </p>
 
-    <a id="title4"><h4 class="title" data-infoID="info4">Categorizing Bookmarks</h4></a>
-    <p class="info" id="info4">Marge, it takes two to lie. One to lie and one to listen. What's the point of going out? We're just going to wind up back here anyway. Kids, kids. I'm not going to die. That only happens to bad people. Oh, loneliness and cheeseburgers are a dangerous mix.</p>
+     <a id="title4"><h4 class="title" data-infoID="info4">Deleting Bookmarks</h4></a>
+    <p class="info" id="info4">
+        To delete an added link or imported list, simply click the orange 'X' button beside the link you wish you remove. Simple as that!
+    </p>
 
-    <a id="title5"><h4 class="title" data-infoID="info5">Creating an Account</h4></a>
-    <p class="info" id="info5">Please do not offer my god a peanut. I'll keep it short and sweet — Family. Religion. Friendship. These are the three demons you must slay if you wish to succeed in business. They only come out in the night. Or in this case, the day.</p>
+    <a id="title5"><h4 class="title" data-infoID="info5">Categorizing Bookmarks</h4></a>
+    <p class="info" id="info5">
+        Coming Soon
+    </p>
 
-    <a id="title6"><h4 class="title" data-infoID="info6">Deleting an Account</h4></a>
-    <p class="info" id="info6">Aaah! Natural light! Get it off me! Get it off me! I hope I didn't brain my damage. I'm normally not a praying man, but if you're up there, please save me, Superman. Oh, a *sarcasm* detector. Oh, that's a *really* useful invention! Attempted murder? Now honestly, what is that? Do they give a Nobel Prize for attempted chemistry? I hope I didn't brain my damage.</p>
+    <a id="title6"><h4 class="title" data-infoID="info6">Viewing Statistics</h4></a>
+    <p class="info" id="info6">
+        Coming Soon
+    </p>
 
-    <a id="title7"><h4 class="title" data-infoID="info7">Viewing Statistics</h4></a>
-    <p class="info" id="info7">Oh, so they have Internet on computers now! When I held that gun in my hand, I felt a surge of power…like God must feel when he's holding a gun. I hope I didn't brain my damage. What's the point of going out? We're just going to wind up back here anyway.</p>
+    <a id="title7"><h4 class="title" data-infoID="info7">Creating an Account</h4></a>
+    <p class="info" id="info7">
+        You can create an account by clicking the 'Sign Up Now!' button on the @Html.ActionLink("front page", "Index", "Home"). It will ask you to select a user name and password. Passwords must contain at least one number and one special character (~!#$ etc.) Click 'Register'. This will redirect you back to the homepage. Now you may click 'Login' below the 'Sign Up Now!' button. Once there, enter your new user name and password, and you're in!
+    </p>
+
+    <a id="title8"><h4 class="title" data-infoID="info8">Deleting an Account</h4></a>
+    <p class="info" id="info8">
+        To delete your account, contact the Cloud Marker team at <a href="mailto:fluffyunicorns@cloudmarker.com">fluffyunicorns@cloudmarker.com</a>
+    </p>
+
+    
 </div>
